# trabalho_1_2_sistemas_operacionais

./: .gitignore  CMakeLists.txt  README.md
include/: calc_math.h  funcoes.h  threads.h
src/: calc_math.c  funcoes.c  main.c  main.cpp  threads.c
